Convert second test method